@@ -14,7 +14,6 @@ import org.opensearch.cluster.metadata.IndexNameExpressionResolver;
 import org.opensearch.cluster.node.DiscoveryNodes;
 import org.opensearch.cluster.service.ClusterService;
 import org.opensearch.common.inject.Module;
-import org.opensearch.common.network.NetworkService;
 import org.opensearch.common.settings.ClusterSettings;
 import org.opensearch.common.settings.IndexScopedSettings;
 import org.opensearch.common.settings.Setting;
@@ -23,7 +22,6 @@ import org.opensearch.common.settings.SettingsFilter;
 import org.opensearch.core.action.ActionResponse;
 import org.opensearch.core.common.io.stream.NamedWriteableRegistry;
 import org.opensearch.core.xcontent.NamedXContentRegistry;
-import org.opensearch.discovery.SeedHostsProvider;
 import org.opensearch.env.Environment;
 import org.opensearch.env.NodeEnvironment;
 import org.opensearch.indices.SystemIndexDescriptor;
@@ -40,46 +38,35 @@ import org.opensearch.plugin.wlm.rest.RestDeleteWorkloadGroupAction;
 import org.opensearch.plugin.wlm.rest.RestGetWorkloadGroupAction;
 import org.opensearch.plugin.wlm.rest.RestUpdateWorkloadGroupAction;
 import org.opensearch.plugin.wlm.rule.WorkloadGroupFeatureType;
-import org.opensearch.plugin.wlm.rule.WorkloadGroupFeatureValueValidator;
-import org.opensearch.plugin.wlm.rule.WorkloadGroupRuleRoutingService;
-import org.opensearch.plugin.wlm.rule.sync.RefreshBasedSyncMechanism;
-import org.opensearch.plugin.wlm.rule.sync.detect.RuleEventClassifier;
 import org.opensearch.plugin.wlm.service.WorkloadGroupPersistenceService;
 import org.opensearch.plugins.ActionPlugin;
-import org.opensearch.plugins.DiscoveryPlugin;
 import org.opensearch.plugins.Plugin;
 import org.opensearch.plugins.SystemIndexPlugin;
 import org.opensearch.repositories.RepositoriesService;
 import org.opensearch.rest.RestController;
 import org.opensearch.rest.RestHandler;
 import org.opensearch.rule.InMemoryRuleProcessingService;
-import org.opensearch.rule.RuleEntityParser;
 import org.opensearch.rule.RulePersistenceService;
-import org.opensearch.rule.RuleRoutingService;
 import org.opensearch.rule.autotagging.FeatureType;
 import org.opensearch.rule.service.IndexStoredRulePersistenceService;
 import org.opensearch.rule.spi.RuleFrameworkExtension;
-import org.opensearch.rule.storage.AttributeValueStoreFactory;
 import org.opensearch.rule.storage.DefaultAttributeValueStore;
 import org.opensearch.rule.storage.IndexBasedRuleQueryMapper;
 import org.opensearch.rule.storage.XContentRuleParser;
 import org.opensearch.script.ScriptService;
 import org.opensearch.threadpool.ThreadPool;
-import org.opensearch.transport.TransportService;
 import org.opensearch.transport.client.Client;
 import org.opensearch.watcher.ResourceWatcherService;
 
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
-import java.util.Map;
 import java.util.function.Supplier;
 
 /**
  * Plugin class for WorkloadManagement
  */
-public class WorkloadManagementPlugin extends Plugin implements ActionPlugin, SystemIndexPlugin, DiscoveryPlugin, RuleFrameworkExtension {
-
+public class WorkloadManagementPlugin extends Plugin implements ActionPlugin, SystemIndexPlugin, RuleFrameworkExtension {
     /**
      * The name of the index where rules are stored.
      */
@@ -88,9 +75,8 @@ public class WorkloadManagementPlugin extends Plugin implements ActionPlugin, Sy
      * The maximum number of rules allowed per GET request.
      */
     public static final int MAX_RULES_PER_PAGE = 50;
-    private static FeatureType featureType;
-    private static RulePersistenceService rulePersistenceService;
-    private static RuleRoutingService ruleRoutingService;
+
+    private final RulePersistenceServiceHolder rulePersistenceServiceHolder = new RulePersistenceServiceHolder();
 
     private AutoTaggingActionFilter autoTaggingActionFilter;
 
@@ -113,43 +99,19 @@ public class WorkloadManagementPlugin extends Plugin implements ActionPlugin, Sy
         IndexNameExpressionResolver indexNameExpressionResolver,
         Supplier<RepositoriesService> repositoriesServiceSupplier
     ) {
-        featureType = new WorkloadGroupFeatureType(new WorkloadGroupFeatureValueValidator(clusterService));
-        RuleEntityParser parser = new XContentRuleParser(featureType);
-        AttributeValueStoreFactory attributeValueStoreFactory = new AttributeValueStoreFactory(
-            featureType,
-            DefaultAttributeValueStore::new
-        );
-        InMemoryRuleProcessingService ruleProcessingService = new InMemoryRuleProcessingService(attributeValueStoreFactory);
-        rulePersistenceService = new IndexStoredRulePersistenceService(
+        RulePersistenceServiceHolder.rulePersistenceService = new IndexStoredRulePersistenceService(
             INDEX_NAME,
             client,
-            clusterService,
             MAX_RULES_PER_PAGE,
-            parser,
+            new XContentRuleParser(WorkloadGroupFeatureType.INSTANCE),
             new IndexBasedRuleQueryMapper()
         );
-
-        ruleRoutingService = new WorkloadGroupRuleRoutingService(client, clusterService);
-
-        RefreshBasedSyncMechanism refreshMechanism = new RefreshBasedSyncMechanism(
-            threadPool,
-            clusterService.getSettings(),
-            clusterService.getClusterSettings(),
-            parser,
-            ruleProcessingService,
-            featureType,
-            rulePersistenceService,
-            new RuleEventClassifier(Collections.emptySet(), ruleProcessingService)
+        InMemoryRuleProcessingService ruleProcessingService = new InMemoryRuleProcessingService(
+            WorkloadGroupFeatureType.INSTANCE,
+            DefaultAttributeValueStore::new
         );
-
         autoTaggingActionFilter = new AutoTaggingActionFilter(ruleProcessingService, threadPool);
-        return List.of(refreshMechanism);
-    }
-
-    @Override
-    public Map<String, Supplier<SeedHostsProvider>> getSeedHostProviders(TransportService transportService, NetworkService networkService) {
-        ((WorkloadGroupRuleRoutingService) ruleRoutingService).setTransportService(transportService);
-        return Collections.emptyMap();
+        return Collections.emptyList();
     }
 
     @Override
@@ -169,7 +131,7 @@ public class WorkloadManagementPlugin extends Plugin implements ActionPlugin, Sy
 
     @Override
     public Collection<SystemIndexDescriptor> getSystemIndexDescriptors(Settings settings) {
-        return List.of(new SystemIndexDescriptor(INDEX_NAME, "System index used for storing workload_group rules"));
+        return List.of(new SystemIndexDescriptor(INDEX_NAME, "System index used for storing rules"));
     }
 
     @Override
@@ -192,7 +154,7 @@ public class WorkloadManagementPlugin extends Plugin implements ActionPlugin, Sy
 
     @Override
     public List<Setting<?>> getSettings() {
-        return List.of(WorkloadGroupPersistenceService.MAX_QUERY_GROUP_COUNT, RefreshBasedSyncMechanism.RULE_SYNC_REFRESH_INTERVAL_SETTING);
+        return List.of(WorkloadGroupPersistenceService.MAX_QUERY_GROUP_COUNT);
     }
 
     @Override
@@ -202,16 +164,15 @@ public class WorkloadManagementPlugin extends Plugin implements ActionPlugin, Sy
 
     @Override
     public Supplier<RulePersistenceService> getRulePersistenceServiceSupplier() {
-        return () -> rulePersistenceService;
+        return () -> RulePersistenceServiceHolder.rulePersistenceService;
     }
 
     @Override
-    public Supplier<RuleRoutingService> getRuleRoutingServiceSupplier() {
-        return () -> ruleRoutingService;
+    public FeatureType getFeatureType() {
+        return WorkloadGroupFeatureType.INSTANCE;
     }
 
-    @Override
-    public Supplier<FeatureType> getFeatureTypeSupplier() {
-        return () -> featureType;
+    static class RulePersistenceServiceHolder {
+        private static RulePersistenceService rulePersistenceService;
     }
 }
